Fix progress bar completion icon alignment (#1296)
* Fix progress bar completion icon alignment

Simplify progress CSS & tailwind class usage. Same result.

Fix tailwind content paths config.

* Remove gap

* Remove negative margin - superfluous

* Align counters to the right

* Wrap title instead of counter if too long

--- a/resources/css/award-count.css
+++ b/resources/css/award-count.css
@@ -1,7 +1,7 @@
 .awardcounter {
-  margin: 0 .3em;
   font-size: .65em;
   cursor: help;
+  white-space: nowrap;
 }
 
 .awardcounter > * {
